[gd_scene load_steps=18 format=3 uid="uid://be1peyuy6qncr"]

[ext_resource type="Script" path="res://scenes/ally_characters/ally_character_green.gd" id="1_0buqa"]
[ext_resource type="Texture2D" uid="uid://digra46lrfi4r" path="res://assets/Jester_green.png" id="2_sm3gc"]
[ext_resource type="PackedScene" uid="uid://bqnxx0yem4uhs" path="res://scenes/behaviors/ally_steering_behavior.tscn" id="3_4214j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jmw02"]
atlas = ExtResource("2_sm3gc")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g1o8"]
atlas = ExtResource("2_sm3gc")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_polnm"]
atlas = ExtResource("2_sm3gc")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqjwy"]
atlas = ExtResource("2_sm3gc")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1600"]
atlas = ExtResource("2_sm3gc")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo0c7"]
atlas = ExtResource("2_sm3gc")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yby0i"]
atlas = ExtResource("2_sm3gc")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8665"]
atlas = ExtResource("2_sm3gc")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cllik"]
atlas = ExtResource("2_sm3gc")
region = Rect2(112, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn6dg"]
atlas = ExtResource("2_sm3gc")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0vnn"]
atlas = ExtResource("2_sm3gc")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3k0bw"]
atlas = ExtResource("2_sm3gc")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_nqeme"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmw02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g1o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_polnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g1o8")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqjwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1600")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo0c7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1600")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yby0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8665")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cllik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8665")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn6dg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0vnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3k0bw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0vnn")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nc1de"]
size = Vector2(9, 4)

[node name="AllyCharacterGreen" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_0buqa")
speed = null
accelleration = null
speech_delay = null

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_nqeme")
animation = &"walk_up"
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -2)
shape = SubResource("RectangleShape2D_nc1de")

[node name="AllySteeringBehavior" parent="." node_paths=PackedStringArray("character_body") instance=ExtResource("3_4214j")]
visible = false
character_body = NodePath("..")

[node name="Navigation" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]
avoidance_enabled = true
radius = 30.0
avoidance_layers = 2
avoidance_mask = 7

[node name="Timer" type="Timer" parent="Navigation"]
wait_time = 0.1
autostart = true

[node name="SpeechTimer" type="Timer" parent="."]

[connection signal="velocity_computed" from="Navigation/NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="Navigation/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SpeechTimer" to="." method="_on_speech_timer_timeout"]
